# memoryManagerCC

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: test.yml
skills/memory-search/: SKILL.md
src/mmcc/: __init__.py  cli.py  notepad.py  paths.py  render.py  store.py
tests/: conftest.py  test_cli.py  test_notepad.py  test_paths.py  test_store.py
