[project]
name = "mmcc"
version = "0.1.0"
description = "Browse and search Claude Code auto memory across projects"
requires-python = ">=3.11"
dependencies = []
authors = [{ name = "Peip" }]
license = { text = "MIT" }
readme = "README.md"

[project.scripts]
mmcc = "mmcc.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mmcc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
